qml_ws/log/build_2024-03-30_23-45-23/qml_pkg/stderr.log
/home/nida/Desktop/qml_ws/src/qml_pkg/src/main.cpp: In function ‘void update_slider(QObject*)’:
/home/nida/Desktop/qml_ws/src/qml_pkg/src/main.cpp:19:50: error: cannot convert ‘QList<QObject*>’ to ‘QObject*’ in initialization
   19 |     QObject *obj = object->findChildren<QObject*>("slider");
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
      |                                                  |
      |                                                  QList<QObject*>
gmake[2]: *** [CMakeFiles/main.dir/build.make:76: CMakeFiles/main.dir/src/main.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/main.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
